<resources>
    <string name="app_name">Catroid</string>
    <string name="project">project</string>
    <string name="sprite">sprite</string>
    <string name="script">script</string>
    <string name="brick">brick</string>
    <string name="cancel_button">Cancel</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="background">Background</string>
    <string name="stage">Stage</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="current_project">Current project:</string>
    <string name="current_project_button">Current Project</string>
    <string name="my_projects">My Projects</string>
    <string name="settings">Settings</string>
    <string name="web_resources">Web Resources</string>
    <string name="forum">Forum</string>
    <string name="new_project">New Project</string>
    <string name="load">Load</string>
    <string name="about">About Catroid</string>
    <string name="upload_project">Upload Project</string>
    <string name="pref_category_mindstorm">Lego Mindstorms settings</string>
    <string name="pref_enable_ms_bricks">Enable Lego Mindstorms bricks</string>
    <string name="pref_descr_ms_bricks">These bricks are used to control Lego Mindstorms robots.</string>
    <string name="about_title">About Catroid</string>
    <string name="about_text">Catroid is a programming 
        environment and interpreter for Android devices for the visual 
        programming language Catrobat.\n\n
        Catroid is mainly licensed under the GNU AGPL v3 License. 
        For the precise details of the license see the link below.\n</string>
    <string name="about_catroid_license_link_text">Catroid License</string>
    <string name="project_name">Project:</string>
    <string name="number_of_scripts">Scripts:</string>
    <string name="number_of_bricks">Bricks:</string>
    <string name="number_of_costumes">Costumes:</string>
    <string name="number_of_sounds">Sounds:</string>
    <string name="sprite_name">Sprite:</string>
    <string name="spritelist_footer_image_description">Tap to add new sprite</string>
    <string name="scripts">Scripts</string>
    <string name="costumes">Costumes</string>
    <string name="sounds">Sounds</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="rename_costume_dialog">Rename costume</string>
    <string name="edit_costume">edit</string>
    <string name="edit_costume_paintroid">Paintroid</string>
    <string name="copy_costume">copy</string>
    <string name="costumename_invalid">This costume\'s name is invalid</string>
    <string name="copy_costume_addition">copy</string>
    <string name="paintroid_not_installed">Paintroid is not installed!\nDo you want to install it?</string>
    <string name="default_costume_name">costume</string>
    <string name="delete_costume_dialog">Delete costume?</string>
    <string name="add_costume_from_camera">From Camera</string>
    <string name="add_costume_from_gallery">From Gallery</string>
    <string name="select_costume_from_gallery">Select image</string>
    <string name="select_costume_from_camera">Select photo</string>
    <string name="costumelist_footer_image_description_for_camera">Tap to add new photo</string>
    <string name="costumelist_footer_image_description_for_gallery">Tap to add new image</string>
    <string name="rename_sound_dialog">Rename sound</string>
    <string name="soundname_invalid">This sound\'s name is invalid</string>
    <string name="sound_play">play</string>
    <string name="sound_pause">pause</string>
    <string name="sound_delete">delete</string>
    <string name="sound_select_source">Select a sound</string>
    <string name="delete_sound_dialog">Delete sound?</string>
    <string name="soundlist_footer_image_description">Tap to add new sound</string>
    <string name="last_used">Last used:</string>
    <string name="description">Description:</string>
    <string name="set_description">Set description</string>
    <string name="rename_project">Rename Project</string>
    <string name="myprojectlist_footer_image_description">Tap to add new project</string>
    <string name="copy_project">Copy Project</string>
    <string name="soundrecorder_name">Catroid Sound Recorder</string>
    <string name="soundrecorder_record_start">Start recording</string>
    <string name="soundrecorder_record_stop">Stop recording</string>
    <string name="soundrecorder_recording">recording in progress…</string>
    <string name="soundrecorder_error">Sound recording failed</string>
    <string name="soundrecorder_recorded_filename">record</string>
    <string name="text_to_speech_engine_not_installed">Text-to-Speech engine not installed!\nDo you want to install it?</string>
    <string name="script_context_menu_title">Script Menu</string>
    <string name="brick_context_dialog_move_brick">Move Brick</string>
    <string name="brick_context_dialog_delete_brick">Delete Brick</string>
    <string name="brick_context_dialog_animate_bricks">Animate Brick-Parts</string>
    <string name="new_project_dialog_title">New project</string>
    <string name="new_project_dialog_hint">My Project</string>
    <string name="new_project_description_dialog_hint">My Description</string>
    <string name="new_project_name">Project name:</string>
    <string name="new_project_description">Project description:</string>
    <string name="new_sprite_dialog_default_sprite_name">My Sprite</string>
    <string name="new_sprite_dialog_title">Name of new Sprite</string>
    <string name="spritename_already_exists">This spritename already exists</string>
    <string name="rename_sprite_dialog">Rename Sprite</string>
    <string name="spritename_invalid">This spritename is invalid</string>
    <string name="login_register_dialog_title">Login</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_or_register">Login or Register</string>
    <string name="register">Register</string>
    <string name="password_forgotten">Password forgotten</string>
    <string name="new_user_registered">new account created</string>
    <string name="register_error">Error occurred</string>
    <string name="overwrite_text">Project with same name already exists!</string>
    <string name="overwrite_replace">replace existing Project</string>
    <string name="overwrite_rename">rename downloaded Project</string>
    <string name="back">Back</string>
    <string name="resume_current_project">Resume</string>
    <string name="restart_current_project">Restart</string>
    <string name="stage_dialog_title">Stage Options</string>
    <string name="stagemenu_screen_size">Maximize/\nStretch</string>
    <string name="stagemenu_axes_on">Axes On</string>
    <string name="stagemenu_axes_off">Axes Off</string>
    <string name="stagemenu_screenshot">Screenshot</string>
    <string name="new_broadcast_message">new…</string>
    <string name="broadcast_nothing_selected">Nothing…</string>
    <string name="categories">Categories</string>
    <string name="category_motion">Motion</string>
    <string name="category_looks">Looks</string>
    <string name="category_sound">Sound</string>
    <string name="category_control">Control</string>
    <string name="category_lego_nxt">Lego NXT</string>
    <string name="brick_place_at">Place at</string>
    <string name="x_label">X:</string>
    <string name="y_label">Y:</string>
    <string name="brick_set_x">Set X to:</string>
    <string name="brick_set_y">Set Y to:</string>
    <string name="brick_change_x_by">Change X by:</string>
    <string name="brick_change_y_by">Change Y by:</string>
    <string name="brick_go_back">Go back</string>
    <string name="brick_go_back_layers">layers</string>
    <string name="brick_come_to_front">Go to front</string>
    <string name="brick_if_on_edge_bounce">If on edge, bounce</string>
    <string name="brick_move">Move</string>
    <string name="brick_move_n_steps">steps</string>
    <string name="brick_turn_left">Turn left</string>
    <string name="brick_turn_left_n_degrees">degrees</string>
    <string name="brick_turn_right">Turn right</string>
    <string name="brick_turn_right_n_degrees">degrees</string>
    <string name="brick_point_in_direction">Point in direction</string>
    <string name="brick_point_to">Point towards</string>
    <string name="brick_glide">Glide</string>
    <string name="brick_glide_to">to</string>
    <string name="brick_set_costume">Switch to costume</string>
    <string name="brick_set_background">Set background</string>
    <string name="brick_set_size_to">Set size to</string>
    <string name="brick_change_size_by">Change size by</string>
    <string name="brick_hide">Hide</string>
    <string name="brick_show">Show</string>
    <string name="brick_set_ghost_effect">Set ghost effect</string>
    <string name="brick_change_ghost_effect">Change ghost effect</string>
    <string name="brick_set_brightness">Set brightness</string>
    <string name="brick_change_brightness">Change brightness</string>
    <string name="by_label">by</string>
    <string name="to_label">to</string>
    <string name="brick_clear_graphic_effect">Clear graphic effects</string>
    <string name="brick_next_costume">Next costume</string>
    <string name="brick_next_background">Next background</string>
    <string name="brick_play_sound">Start sound</string>
    <string name="brick_stop_all_sounds">Stop all sounds</string>
    <string name="brick_set_volume_to">Set volume to</string>
    <string name="brick_change_volume_by">Change volume by</string>
    <string name="brick_speak">Speak</string>
    <string name="brick_when_started">When project starts</string>
    <string name="brick_when">When</string>
    <string name="brick_wait">Wait</string>
    <string name="seconds">seconds</string>
    <string name="brick_broadcast_receive">When I receive</string>
    <string name="brick_broadcast">Broadcast</string>
    <string name="brick_broadcast_wait">Broadcast and wait</string>
    <string name="brick_note">Note</string>
    <string name="brick_forever">Forever</string>
    <string name="brick_repeat">Repeat</string>
    <string name="times_label">times</string>
    <string name="brick_loop_end">End of loop</string>
    <string name="brick_if_begin">If</string>
    <string name="brick_if_begin_second_part">is true then</string>
    <string name="brick_if_else">Else</string>
    <string name="brick_if_end">End If</string>
    <string name="action_tapped">tapped</string>
    <string name="action_doubleTapped">double tapped</string>
    <string name="action_longPressed">long pressed</string>
    <string name="action_swipeLeft">swipe left</string>
    <string name="action_swipeRight">swipe right</string>
    <string name="formula_editor_decimal_mark">.</string>
    <string name="formula_editor_function_rand">random</string>
	<string name="formula_editor_undo">Undo</string>
	<string name="formula_editor_redo">Redo</string>
	<string name="formula_editor_compute">Compute</string>
	<string name="formula_editor_delete">Delete</string>
	<string name="formula_editor_object">Object</string>
	<string name="formula_editor_math">Math</string>
	<string name="formula_editor_logic">Logic</string>
	<string name="formula_editor_sensors">Sensors</string>
	<string name="formula_editor_variables">Variables</string>
	<string name="formula_editor_operator_mult">×</string>
	<string name="formula_editor_operator_plus">+</string>
	<string name="formula_editor_operator_minus">-</string>
	<string name="formula_editor_operator_divide">÷</string>
</resources>