<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Catroid: An on-device graphical programming language for Android devices
 *  Copyright (C) 2010-2011 The Catroid Team
 *  (<http://code.google.com/p/catroid/wiki/Credits>)
 *  
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *  
 *  An additional term exception under section 7 of the GNU Affero
 *  General Public License, version 3, is available at
 *  http://www.catroid.org/catroid_license_additional_term
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Affero General Public License for more details.
 *   
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<!--
/* 
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyWidth="17.5%p"
    android:horizontalGap="0px"
    android:verticalGap="0px"
    android:keyHeight="@dimen/key_height"
    >
	
	<Row>
        <Key android:codes="1800" android:keyLabel="@string/formula_editor_undo" android:keyEdgeFlags="left"/>
        <Key android:codes="1900" android:keyLabel="@string/formula_editor_redo"/>
        <Key android:codes="2000" android:keyLabel="@string/formula_editor_compute" android:keyWidth="35%p"/>
		<Key android:codes="67" android:keyLabel="@string/formula_editor_delete" android:keyWidth="30%p" android:keyEdgeFlags="right" />
    </Row> 
	
	<Row>
        <Key android:codes="14" android:keyLabel="7" android:keyEdgeFlags="left"/>
        <Key android:codes="15" android:keyLabel="8"/>
        <Key android:codes="16" android:keyLabel="9"/>
        <Key android:codes="76" android:keyLabel="@string/formula_editor_operator_divide" />
		<Key android:codes="1400" android:keyLabel="@string/formula_editor_object" android:keyWidth="30%p" android:keyEdgeFlags="right" />
    </Row> 
    
    <Row>
        <Key android:codes="11" android:keyLabel="4" android:keyEdgeFlags="left"/>
        <Key android:codes="12" android:keyLabel="5"/>
        <Key android:codes="13" android:keyLabel="6"/>
		<Key android:codes="17" android:keyLabel="@string/formula_editor_operator_mult"/>
		<Key android:codes="1500" android:keyLabel="@string/formula_editor_math" android:keyWidth="30%p" android:keyEdgeFlags="right" />
    </Row>
    
	<Row>
        <Key android:codes="8" android:keyLabel="1" android:keyEdgeFlags="left"/>
        <Key android:codes="9" android:keyLabel="2"/>
        <Key android:codes="10" android:keyLabel="3"/>
        <Key android:codes="69" android:keyLabel="@string/formula_editor_operator_minus" />
		<Key android:codes="1600" android:keyLabel="@string/formula_editor_logic" android:keyWidth="30%p" android:keyEdgeFlags="right" />
    </Row>
    
    <Row>
	    <Key android:codes="56" android:keyLabel="@string/formula_editor_decimal_mark"  android:keyEdgeFlags="left"/>
        <Key android:codes="7" android:keyLabel="0" />
		<Key android:codes="70" android:keyLabel="="/> 
		<Key android:codes="81" android:keyLabel="@string/formula_editor_operator_plus"/>
        <Key android:codes="1100" android:keyLabel="@string/formula_editor_sensors" android:keyWidth="30%p" android:keyEdgeFlags="right" />
		
	</Row>
	    <Row  android:rowEdgeFlags="bottom">
    	<Key android:codes="1200" android:keyLabel="( )" android:keyWidth="35%p" android:keyEdgeFlags="left"/>
		<Key android:codes="1008" android:keyLabel="@string/formula_editor_function_rand" android:keyWidth="35%p"/>
        <Key android:codes="1700" android:keyLabel="@string/formula_editor_variables" android:keyWidth="30%p" android:keyEdgeFlags="right" />
	</Row>
</Keyboard>